--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Doot Inc.</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
