--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
         .fade-in {
             animation: fadeIn 0.6s ease-out forwards;
         }
+
+        /* Cross-browser backdrop blur for header */
+        header {
+            -webkit-backdrop-filter: blur(12px);
+            backdrop-filter: blur(12px);
+            background-color: rgba(255, 255, 255, 0.5);
+        }
     </style>
 </head>
 <body class="bg-white">
