--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doot Inc.</title>
+    <meta name="google-site-verification" content="38ZZdbUzE6XNVrgLVfwu6ZuvIpbztMnnk7DH6g9jLiU" />
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png">
